postgres_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deployment
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet # This is important for the pod to resolve the hostnames
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: default
  labels:
    app: postgres-deployment
spec:
  type: NodePort
  selector:
    app: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30032
