user_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user-deployment
spec:
  selector:
    matchLabels:
      app: user-deployment
  template:
    metadata:
      labels:
        app: user-deployment
    spec:
      containers:
        - name: user-service
          image: shoppi/user-service:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
            - name: keys-volume
              mountPath: /app/config/keys
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: dev-config
        - name: keys-volume
          configMap:
            name: dev-keys
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
  labels:
    app: user-service
spec:
  selector:
    app: user-deployment
  ports:
    - name: user-service-port
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: ''
