ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dev.shoppi.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
    - host: user-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
    - host: order-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
    - host: payment-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
    - host: restaurant-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
